tests/spec/compile-fail/035_interface_access_field.zn
// category: compile-fail
// profile: freestanding
// purpose: bare interface names cannot be used as struct field types

module tests.fail.interfaceAccessField;

import core.result.Result;

enum WriteError {
    Failed,
}

interface Writer {
    fn write(mut self, bytes: ArraySlice<U8>) -> Result<USize, WriteError>;
}

struct BadSink {
    writer: Writer, // expected-error: interface name cannot be used as a field type; use W: Writer or Box<Writer>
}
